Source/GridDominance.Server/admin/admin.css
.infodiv {
  background: lightgray;
  margin: 5px;
  font-size: 32px;
  display:inline-flex;
  padding-left: 10px;
  padding-top: 2px;
  padding-right: 10px;
  padding-bottom: 2px;
  
  border: 1px dashed black;
}

#rootbox {
  margin: 32px;
}

.infocontainer {
  display: flex;
  justify-content: center;
}

h1 {
  font-size: 60px;
  text-align: center;
}

h2 {
  padding-top: 64px;
  text-align: center;
}

.sqltab {
  align-self: center;
}

.tab_prev {
  visibility: collapse;
  display: none;

  white-space: pre;
  font-family: monospace;
}

.sqltab td {
  max-width: 128px;
  word-wrap: break-word;
}

body {
  text-align: center;
}

.tablebox {
  text-align: left;
  display: flex;
  justify-content: center;
  flex-flow: column;
}

.collapseheader > a {
  color: black !important;
  background-color: darkgrey;
  text-decoration: none;
  padding: 5px;
  border: 1px black dotted;
}

.collapseheader.open > a {
  background-color: lightgray;
  border: 1px black solid;
}


a:visited { color: blue; } 

h1 a { color: black; text-decoration: none; } 
h1 a:visited { color: black; text-decoration: none; } 
h1 a:hover { color: blue; text-decoration: underline; } 



.columnbox3 {
  width: 100%;
}
.columnbox3:after {
  content: "";
  display: table;
  clear: both;
}

.column3_0, .column3_1, .column3_2 {
  width: 33%;
  float: left;
}

.div_prev {
  overflow: auto;
  max-height: 768px;
}

.errordatabox {
  text-align: left;
  border: 1px #888 solid;
  background: #EEE;
  margin: 0px 64px;
  padding: 8px;
  word-wrap: break-word;
  max-height: 768px;
  overflow: auto;
  font-family: monospace;
}

.scrollabletabbox {
  overflow: auto;
  max-height: 1200px;
}

.td_err {
  background: #F33;
}

.td_highlight {
  background: wheat;
}

.pagination_row {
  margin: 30px 200px 0 200px;
  text-align: left;
}

.pagination_link, .pagination_curr {
  display: inline-block;
  min-width: 38px;
  padding: 2px 5px;
  margin:  2px 0;
  font-weight: bold;

  text-align: center;
  text-decoration: none;
  color: black;
}

.pagination_link:hover {
  background: lightblue;
}

.pagination_link:visited {
  color: black;
}

.pagination_link {
  background: lightgray;
  border: 1px solid darkgray;
}

.pagination_curr {
  background: gray;
  border: 1px solid black;
}

.subhshdr {
  margin: 35px 0 10px 0;
  font-weight: bold;
  font-size: x-large;

}

.subhshdr a {
  text-decoration: none;
  color: black;

  display: inline-block;
  border: 1px dotted #BBB;
  padding: 2px 10px;
  background: #EEE;
  min-width: 500px;
}

.subhshdr a:visited {
  text-decoration: none;
  color: black;
}

.subhshdr a:hover {
  border: 1px solid #444;
  background: #9BF;
}

.filterlinkrow {
  text-align: center;
  margin: 0 0 5px 0;
}

.filterlinkrow a {
  display: inline-block;
  background: #444;
  padding: 5px;
  margin: 0 5px 0 5px;

  color: white;
  text-decoration: none;
  font-weight: bold;

  border: 1px dotted #FFF;
}

.filterlinkrow a:visited {
  color: white;
}

